Fixed alignment of codenumbers in ToC on mobile.

--- a/scss/ui/partials/_toc.scss
+++ b/scss/ui/partials/_toc.scss
@@ -112,7 +112,7 @@ h2 {
     text-align:right;
 
     @media screen and (max-width: $ui-screen-sm-min) {
-        margin-right:-($base-indent-touch);
+        margin-right:-($base-indent-touch+$codenumber-width);
     }
 }
 
